--- a/src/pages/slik-gjor-du-det/klagerettigheter/klagerettigheter.njk
+++ b/src/pages/slik-gjor-du-det/klagerettigheter/klagerettigheter.njk
@@ -10,7 +10,7 @@ permalink: 'slik-gjor-du-det/klagerettigheter/index.html'
 
   <main class="grid pt-16 grid-cols-combi" data-theme="sykepenger" x-data="{ showTopAnchor: false }">
     <div class="col-main">
-      <div class="tracking-widest small-caps">{{ category | safe }}</div>
+      <div class="text-lg tracking-widest small-caps">{{ category | safe }}</div>
       <h1 class="mt-1 font-extrabold text-2xl/tight text-balance ">{{ title | safe }}</h1>
       <div class="mt-6 prose text-pretty max-w-prose">
         <p class="text-lg">{{ ingress | safe }}</p>
