--- a/src/pages/produkt/sykepenger/sykepenger.njk
+++ b/src/pages/produkt/sykepenger/sykepenger.njk
@@ -16,7 +16,7 @@ permalink: 'produkt/sykepenger/index.html'
       <div class="text-lg tracking-widest small-caps">{{ category | safe }}</div>
       <h1 class="mt-1 font-extrabold text-3xl/tight text-balance text-[#99185E]">{{ title | safe }}</h1>
       <div class="mt-6 prose text-pretty max-w-prose">
-        <p class="text-xl">{{ ingress | safe }}</p>
+        <p class="text-lg">{{ ingress | safe }}</p>
 
         {% if audience %}          
         <div class="text-sm leading-normal text-pretty">
