--- a/src/pages/slik-gjor-du-det/klagerettigheter/klagerettigheter.njk
+++ b/src/pages/slik-gjor-du-det/klagerettigheter/klagerettigheter.njk
@@ -11,9 +11,9 @@ permalink: 'slik-gjor-du-det/klagerettigheter/index.html'
   <main class="grid pt-16 grid-cols-combi" data-theme="sykepenger" x-data="{ showTopAnchor: false }">
     <div class="col-main">
       <div class="text-lg tracking-widest small-caps">{{ category | safe }}</div>
-      <h1 class="mt-1 font-extrabold text-2xl/tight text-balance ">{{ title | safe }}</h1>
+      <h1 class="mt-1 font-extrabold text-3xl/tight text-balance text-[#99185E]">{{ title | safe }}</h1>
       <div class="mt-6 prose text-pretty max-w-prose">
-        <p class="text-lg">{{ ingress | safe }}</p>
+        <p class="text-lg/snug">{{ ingress | safe }}</p>
 
         {% if audience %}          
         <div class="leading-normal bg-white border  border-slate-300 text-balance {{ 'px-4 py-3 rounded-lg' if audience.style === 'default' }} {{'px-4 py-1 rounded-full w-fit' if audience.style === 'simple' }}">
@@ -24,7 +24,7 @@ permalink: 'slik-gjor-du-det/klagerettigheter/index.html'
     </div>
 
     {# Innholdsfortegnelse #}
-    <div class="px-5 py-4 mt-8 rounded-lg bg-blue-50/75 toc" x-intersect:leave="showTopAnchor = true" x-intersect:enter.margin.-400px.0.0.0="showTopAnchor = false">
+    <div class="px-5 py-4 mt-8 border-t-[0.625ch] border-[#99185E] rounded-b-lg bg-[#FEF5F1]" x-intersect:leave="showTopAnchor = true" x-intersect:enter="showTopAnchor = false">
       <h2 class="pb-2 text-base font-semibold">Innhold på siden</h2>
       <ul class="grid gap-4 py-1">
         {% for chapter in chapters.slice(0,-1) %}
@@ -89,20 +89,16 @@ permalink: 'slik-gjor-du-det/klagerettigheter/index.html'
     {% for chapter in chapters %}
       {% set chapterIndex = loop.index %}
       <section class="grid grid-flow-row-dense mt-16 col-full grid-cols-combi " id="{{ chapter.data.title | slugify }}">
-
-        {% if chapter.data.icon %}
-        <div class="aspect-square rounded-full grid place-items-center w-1/2 max-w-[4.75ch] bg-green-200 mt-8 mb-4">
-          {{ chapter.data.icon | svgContents('w-[3ch] h-[3ch] text-green-800') | safe if chapter.data.icon }}
+        <div class="grid mt-8 mb-4 col-full grid-cols-combi">
+          <div class="w-10 h-[0.675ch] bg-[#E6C7D8] mb-5 mt-5"></div>
+          <h2 class="font-bold text-2xl/tight text-balance text-[#99185E]">
+            <a href="#{{ chapter.data.title | slugify }}">{{ chapter.data.title }}</a>
+          </h2>
         </div>
-        {% endif %}
-
-        <h2 class="mb-4 font-bold text-xl/tight text-balance">
-          <a href="#{{ chapter.data.title | slugify }}">{{ chapter.data.title }}</a>
-        </h2>
 
         {# Chapter TOC #}
         {% if chapter.templateContent and chapter.templateContent | tocData | length > 0 and not chapter.data.hideToc %}
-        <nav class="relative px-5 pt-3 pb-4 mt-4 mb-8 rounded-lg toc bg-blue-50/75">
+        <nav class="relative px-5 pt-3 pb-4 mt-4 mb-8 rounded-lg bg-[#FEF5F1]">
           <h3 class="pb-2 font-semibold">I dette kapittelet</h3>
           <ul class="grid gap-2 mt-1 justify-items-start">
             {% for item in chapter.templateContent | tocData %}
@@ -142,9 +138,7 @@ permalink: 'slik-gjor-du-det/klagerettigheter/index.html'
       x-transition:enter-start="translate-y-8 opacity-0"
       x-transition:enter-end="translate-y-0 opacity-100"
     >
-      <a href="#toppen" class="inline-flex items-center justify-center gap-1 py-3 pl-3 pr-5 mx-auto text-sm leading-tight text-center text-white rounded-full ring-4 ring-white hover:underline bg-deepblue-400">
-        {# <span class="p-1 bg-blue-600 rounded-full aspect-square">
-        </span> #}
+      <a href="#toppen" class="inline-flex items-center justify-center gap-1 py-3 pl-3 pr-5 mx-auto text-sm leading-tight text-center text-white rounded-full ring-4 ring-[#E6C7D8] hover:underline bg-[#99185E]">
         {{ '/src/_includes/svg/icons/arrow-up.svg' | svgContents('w-5 h-5 -translate-y-px') | safe }}
         <span>Til toppen av siden</span>
       </a>
