--- a/src/pages/produkt/sykepenger/sykepenger.njk
+++ b/src/pages/produkt/sykepenger/sykepenger.njk
@@ -13,8 +13,8 @@ permalink: 'produkt/sykepenger/index.html'
       <div class="mb-3 sm:absolute sm:-ml-32 sm:mt-3">
         {{ '/src/_includes/svg/piktogrammer/produkter/sykepenger.svg' | svgContents('text-[#99185E] w-16 h-16 sm:w-24 sm:h-24') | safe  }}
       </div>
-      <div class="text-lg tracking-widest small-caps">{{ category | safe }}</div>
-      <h1 class="mt-1 font-extrabold text-3xl/tight text-balance text-[#99185E]">{{ title | safe }}</h1>
+      <div class="text-base tracking-widest small-caps">{{ category | safe }}</div>
+      <h1 class="font-extrabold text-3xl/tight text-balance text-[#99185E]">{{ title | safe }}</h1>
       <div class="mt-6 prose text-pretty max-w-prose">
         <p class="text-lg">{{ ingress | safe }}</p>
 
