--- a/src/pages/slik-gjor-du-det/klagerettigheter/klagerettigheter.njk
+++ b/src/pages/slik-gjor-du-det/klagerettigheter/klagerettigheter.njk
@@ -10,8 +10,8 @@ permalink: 'slik-gjor-du-det/klagerettigheter/index.html'
 
   <main class="grid pt-16 grid-cols-combi" data-theme="sykepenger" x-data="{ showTopAnchor: false }">
     <div class="col-main">
-      <div class="text-lg tracking-widest small-caps">{{ category | safe }}</div>
-      <h1 class="mt-1 font-extrabold text-3xl/tight text-balance text-[#99185E]">{{ title | safe }}</h1>
+      <div class="text-base tracking-widest small-caps">{{ category | safe }}</div>
+      <h1 class="font-extrabold text-3xl/tight text-balance text-[#99185E]">{{ title | safe }}</h1>
       <div class="mt-6 prose text-pretty max-w-prose">
         <p class="text-lg/snug">{{ ingress | safe }}</p>
 
