--- a/src/_includes/macros/tile.njk
+++ b/src/_includes/macros/tile.njk
@@ -1,12 +1,12 @@
 {% macro tile(args) %}
-<div class="relative overflow-clip flex gap-4 px-5 py-3 leading-normal rounded-lg group border border-slate-300 bg-white {{ args.theme or "has-[a:hover]:bg-blue-50/75 has-[a:hover]:border-blue-300 has-[a:active]:border-blue-500 has-[a:active]:bg-blue-50" }}">
- <div class="">
+<div class="relative overflow-clip flex gap-4 px-5 py-3 leading-tight rounded-lg group border border-slate-300 bg-white {{ args.theme or "has-[a:hover]:bg-blue-50/75 has-[a:hover]:border-blue-300 has-[a:active]:border-blue-500 has-[a:active]:bg-blue-50" }}">
+ <div class="grid gap-0.5">
+    <a class="z-10 flex-1 inline-block text-base font-semibold no-underline text-pretty after:absolute after:inset-0 hover:underline hover:decoration-2" href="#">{{ args.title }}</a>
     {%- if args.kicker %}
-    <p class="font-medium leading-tight tracking-wide pointer-events-none opacity-70 small-caps">
+    <p class="font-medium tracking-wide pointer-events-none opacity-70 small-caps">
       {%- for item in args.kicker %}{{ item }}{{ ', ' if not loop.last }}{% endfor -%}
     </p>
     {%- endif %}
-    <a class="z-10 flex-1 font-semibold no-underline text-base/tight after:absolute after:inset-0 hover:underline hover:decoration-2" href="#">{{ args.title }}</a>
     {# {% if args.content %}
       <p class="opacity-85">{{ args.content | safe }}</p>
     {% endif %} #}
