En ekstra fontstørrelse

--- a/src/pages/omrade/helse-og-sykdom/helse-og-sykdom.njk
+++ b/src/pages/omrade/helse-og-sykdom/helse-og-sykdom.njk
@@ -12,7 +12,7 @@ permalink: '/omrade/helse-og-sykdom/index.html'
       <div class="relative pt-12 col-main">
         {{ '/src/_includes/svg/area-illustrations/helse.svg' | svgContents('h-auto min-w-28 max-w-48 ml-auto w-1/3 float-right') | safe }}
         <div class="tracking-widest small-caps">{{ category | safe }}</div>
-        <h1 class="-translate-x-[0.05em] font-extrabold text-2xl/tight text-balance">{{ title | safe }}</h1>
+        <h1 class="-translate-x-[0.05em] font-extrabold text-4xl/tight text-pretty text-[#99185E]">{{ title | safe }}</h1>
         <h2 class="col-span-2 col-start-1 mt-1 text-lg xs:col-start-1 xs:col-span-1 max-w-prose">Hva er situasjonen din?</h2>
       </div>
 
