--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -16,6 +16,7 @@
     --text-fluid-14-16: clamp(0.875rem, 0.8333rem + 0.2083vi, 1rem);
     --text-fluid-16-18: clamp(1rem, 0.9583rem + 0.2083vi, 1.125rem);
     --text-fluid-18-20: clamp(1.125rem, 1.0833rem + 0.2083vi, 1.25rem);
+    --text-fluid-20-22: clamp(1.25rem, 1.2065rem + 0.2174vi, 1.375rem);
     --text-fluid-22-24: clamp(1.375rem, 1.3333rem + 0.2083vi, 1.5rem);
     --text-fluid-24-28: clamp(1.5rem, 1.4167rem + 0.4167vi, 1.75rem);
     --text-fluid-32-36: clamp(2rem, 1.9167rem + 0.4167vi, 2.25rem);
@@ -30,7 +31,7 @@
   }
   * {
     text-decoration-thickness: 0.0625rem;
-    text-underline-offset: 0.125rem;
+    text-underline-offset: 0.15625rem;
   }
   strong {
     font-weight: 650;
@@ -69,7 +70,7 @@
   }
 
   :is(.prose) > h4 {
-    font-size: var(--text-fluid-18-20);
+    font-size: var(--text-fluid-20-22);
     line-height: 1.33;
     letter-spacing: 0;
  
