--- a/src/pages/omrade/arbeid/arbeid.njk
+++ b/src/pages/omrade/arbeid/arbeid.njk
@@ -3,36 +3,47 @@ title: 'Arbeid'
 description: 'Listeside uten ingress og piktogram'
 tags: ['listeside', 'proto']
 permalink: '/omrade/arbeid/index.html'
+contactTheme: white
 ---
 {%- extends 'base.njk' -%}
 
 {%- block content -%}
-  <main class="pb-12 bg-white">
-    <div class="grid pt-12 grid-cols-combi">
-      <div class="relative col-container">
-        {{ '/src/_includes/svg/area-illustrations/arbeid.svg' | svgContents('h-auto min-w-28 max-w-48 ml-auto w-1/3 float-right') | safe }}
-        <div class="tracking-widest small-caps">{{ category | safe }}</div>
-        <h1 class="font-black tracking-tight text-2xl/tight text-balance">
-          {{ title | safe }}
-        </h1>
-        <h2 class="col-span-2 col-start-1 mt-4 text-lg xs:col-start-1 xs:col-span-1 max-w-prose">Hva er situasjonen din?</h2>
-
-        <div class="grid mt-8 lg:grid-cols-2 lg:gap-12">
-          <div>
-            <a class="block rounded-sm px-4 py-2.5 font-medium leading-snug text-blue-600 underline border-l-4 bg-slate-100 border-slate-300 hover:text-blue-500 hover:decoration-2" href="#">Finn ledige stillinger på arbeidsplassen.no</a>
-          </div>
+  <main class="">
+    <div class="grid grid-cols-combi">
+      <div class="relative flex items-end justify-between col-container">
+        <div class="flex-1 pt-8 pb-6 whitespace-nowrap">
+          {# <div class="tracking-widest small-caps">{{ category | safe }}</div> #}
+          <h1 class="font-extrabold tracking-tight text-4xl/tight text-pretty text-[#99185E]">
+            {{ title | safe }}
+          </h1>
+          <h2 class="col-span-2 col-start-1 text-lg text-pretty xs:col-start-1 xs:col-span-1 max-w-prose ">Hva er situasjonen din?</h2>
         </div>
-
-        <div class="mt-12">
-          <ul class="lg:columns-2 lg:gap-12">
-            {%- for item in situationList -%}
-              <li class="relative flex flex-col py-2 -mt-px border-t border-b sm:py-3 border-slate-200 break-inside-avoid">
-                <a class="font-normal leading-snug text-blue-600 text-balance hover:text-blue-500 hover:underline" href="#">{{ item.title | safe }}</a>
-              </li>
-            {%- endfor -%}
-          </ul>
-        </div>
+        {{ '/src/_includes/svg/area-illustrations/arbeid.svg' | svgContents('h-auto min-w-28 max-w-48 w-1/3') | safe }}
       </div>
+    </div>
+
+    <div class="grid pt-4 pb-12 grid-cols-combi bg-slate-100">
+      <ul class="grid col-container md:grid-cols-2 md:gap-x-12 overflow-clip">
+        {%- for item in situationList -%}
+          <li class="relative flex items-start justify-between gap-8 py-4 -my-px border-t border-b bg-slate-100 border-slate-300/75">
+            <div class="grid gap-0.5">
+              <a class="font-normal text-blue-600 text-base/normal text-pretty hover:text-blue-600 hover:underline hover:decoration-2 after:absolute after:inset-0" href="#">
+                {{ item.title | safe }}
+              </a>
+              {# <p class="text-sm/normal">{{ item.ingress | safe }}</p> #}
+            </div>
+            {{ '/src/_includes/svg/icons/arrow-right.svg' | svgContents('w-5 h-5 shrink-0 text-slate-600 self-center') | safe }}
+          </li>
+        {%- endfor -%}
+      </ul>
+
+      <div class="mt-12">
+        <p class="text-sm leading-snug text-center">
+          Finn ledige stillinger på
+          <a class="text-blue-600 underline hover:text-blue-600 hover:decoration-2" href="#">arbeidsplassen.no</a>
+        </p>
+      </div>
+
     </div>
   </main>
 
