--- a/src/pages/omrade/arbeid/arbeid.njk
+++ b/src/pages/omrade/arbeid/arbeid.njk
@@ -11,33 +11,33 @@ contactTheme: white
   <main class="">
     <div class="grid grid-cols-combi">
       <div class="relative flex items-end justify-between col-container">
-        <div class="flex-1 pt-8 pb-6 whitespace-nowrap">
+        <div class="flex-1 pt-8 pb-6">
           {# <div class="tracking-widest small-caps">{{ category | safe }}</div> #}
           <h1 class="font-extrabold tracking-tight text-4xl/tight text-pretty text-[#99185E]">
             {{ title | safe }}
           </h1>
           <h2 class="col-span-2 col-start-1 text-lg text-pretty xs:col-start-1 xs:col-span-1 max-w-prose ">Hva er situasjonen din?</h2>
         </div>
-        {{ '/src/_includes/svg/area-illustrations/arbeid.svg' | svgContents('h-auto min-w-28 max-w-48 w-1/3') | safe }}
+        {{ '/src/_includes/svg/area-illustrations/arbeid.svg' | svgContents('h-auto min-w-32 max-w-52 w-2/5 ') | safe }}
       </div>
     </div>
 
-    <div class="grid pt-4 pb-12 grid-cols-combi bg-slate-100">
-      <ul class="grid col-container md:grid-cols-2 md:gap-x-12 overflow-clip">
+    <div class="grid pt-12 pb-12 grid-cols-combi bg-[#FEF5F1]">
+      <ul class="grid col-container md:grid-cols-2 md:gap-x-12">
         {%- for item in situationList -%}
-          <li class="relative flex items-start justify-between gap-8 py-4 -my-px border-t border-b bg-slate-100 border-slate-300/75">
+          <li class="relative flex items-center justify-between text-pretty gap-8 py-4 -mt-px border-t border-b bg-[#FEF5F1] border-slate-300/75">
             <div class="grid gap-0.5">
-              <a class="font-normal text-blue-600 text-base/normal text-pretty hover:text-blue-600 hover:underline hover:decoration-2 after:absolute after:inset-0" href="#">
+              <h3><a class="font-normal text-blue-600 text-lg/normal hover:text-blue-600 hover:underline hover:decoration-2 after:absolute after:inset-0" href="#">
                 {{ item.title | safe }}
-              </a>
+              </a></h3>
               {# <p class="text-sm/normal">{{ item.ingress | safe }}</p> #}
             </div>
-            {{ '/src/_includes/svg/icons/arrow-right.svg' | svgContents('w-5 h-5 shrink-0 text-slate-600 self-center') | safe }}
+            {{ '/src/_includes/svg/icons/arrow-right.svg' | svgContents('w-5 h-5 shrink-0 text-blue-500 self-center') | safe }}
           </li>
         {%- endfor -%}
       </ul>
 
-      <div class="mt-12">
+      <div class="mt-16">
         <p class="text-sm leading-snug text-center">
           Finn ledige stillinger på
           <a class="text-blue-600 underline hover:text-blue-600 hover:decoration-2" href="#">arbeidsplassen.no</a>
